profile page closer to a more usable format - still needs some margin adjustment as things are headed off the page ... and maybe fix text alignment?

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@ body {
     /* background: rgb(2, 2, 11);
     background: linear-gradient(180deg, rgba(2, 2, 11, 1) 64%, rgba(116, 82, 150, 1) 100%);
     background-attachment: fixed; */
+    text-align: center;
 }
